@@ -1,3 +1,12 @@
+2022-03-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* device/lib/_memset.c,
+	  device/lib/sm83/abs.s,
+	  device/lib/sm83/crt0.s,
+	  device/lib/sm83/memcpy.s,
+	  device/lib/sm83/setjmp.s:
+	  Improve sm83 assembly.
+
 2022-03-01 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* sdas/asxxsrc/asdata.c,
